--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "url": "https://github.com/globaltoken/node-stratum-pool.git"
     },
     "dependencies": {
-        "multi-hashing": "git://github.com/globaltoken/node-multi-hashing.git",
+        "multi-hashing": "https://github.com/amrmons/node-multi-hashing.git",
         "bignum": "*",
         "base58-native": "*",
         "async": "2.6.2"
